[gd_scene load_steps=13 format=2]

[ext_resource path="res://Dice/ChatBox.gd" type="Script" id=1]
[ext_resource path="res://UI/ScrollContainer.gd" type="Script" id=2]
[ext_resource path="res://Dice/ChatArea.gd" type="Script" id=3]
[ext_resource path="res://Dice/TextBox.gd" type="Script" id=4]

[sub_resource type="Image" id=9]
data = {
"data": PoolByteArray( 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 69, 35, 31, 32, 167, 35, 31, 32, 199, 35, 31, 32, 166, 35, 31, 32, 108, 35, 31, 32, 205, 35, 31, 32, 248, 35, 31, 32, 187, 35, 31, 32, 49, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 41, 35, 31, 32, 227, 35, 31, 32, 245, 35, 31, 32, 125, 35, 31, 32, 36, 35, 31, 32, 5, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 49, 35, 31, 32, 174, 35, 31, 32, 255, 35, 31, 32, 152, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 63, 35, 31, 32, 255, 35, 31, 32, 163, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 31, 35, 31, 32, 253, 35, 31, 32, 157, 35, 31, 32, 0, 35, 31, 32, 23, 35, 31, 32, 255, 35, 31, 32, 169, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 20, 35, 31, 32, 255, 35, 31, 32, 59, 35, 31, 32, 127, 35, 31, 32, 255, 35, 31, 32, 18, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 150, 35, 31, 32, 182, 35, 31, 32, 171, 35, 31, 32, 235, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 90, 35, 31, 32, 208, 35, 31, 32, 167, 35, 31, 32, 246, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 124, 35, 31, 32, 193, 35, 31, 32, 101, 35, 31, 32, 255, 35, 31, 32, 45, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 244, 35, 31, 32, 100, 35, 31, 32, 7, 35, 31, 32, 232, 35, 31, 32, 224, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 205, 35, 31, 32, 230, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 40, 35, 31, 32, 255, 35, 31, 32, 248, 35, 31, 32, 94, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 94, 35, 31, 32, 255, 35, 31, 32, 235, 35, 31, 32, 18, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 9, 35, 31, 32, 213, 35, 31, 32, 255, 35, 31, 32, 9, 35, 31, 32, 0, 35, 31, 32, 63, 35, 31, 32, 209, 35, 31, 32, 228, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 131, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 231, 35, 31, 32, 150, 35, 31, 32, 0, 35, 31, 32, 99, 35, 31, 32, 255, 35, 31, 32, 196, 35, 31, 32, 118, 35, 31, 32, 64, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 131, 35, 31, 32, 255, 35, 31, 32, 202, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 133, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 68, 35, 31, 32, 211, 35, 31, 32, 193, 35, 31, 32, 110, 35, 31, 32, 12, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=2]
image = SubResource( 9 )
size = Vector2( 16, 16 )

[sub_resource type="Image" id=10]
data = {
"data": PoolByteArray( 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 142, 35, 31, 32, 209, 35, 31, 32, 175, 35, 31, 32, 151, 35, 31, 32, 136, 35, 31, 32, 65, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 71, 35, 31, 32, 255, 35, 31, 32, 228, 35, 31, 32, 223, 35, 31, 32, 239, 35, 31, 32, 244, 35, 31, 32, 255, 35, 31, 32, 90, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 167, 35, 31, 32, 251, 35, 31, 32, 24, 35, 31, 32, 14, 35, 31, 32, 12, 35, 31, 32, 0, 35, 31, 32, 145, 35, 31, 32, 255, 35, 31, 32, 93, 35, 31, 32, 0, 35, 31, 32, 6, 35, 31, 32, 6, 35, 31, 32, 6, 35, 31, 32, 7, 35, 31, 32, 0, 35, 31, 32, 91, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 116, 35, 31, 32, 125, 35, 31, 32, 255, 35, 31, 32, 100, 35, 31, 32, 70, 35, 31, 32, 79, 35, 31, 32, 80, 35, 31, 32, 80, 35, 31, 32, 79, 35, 31, 32, 75, 35, 31, 32, 78, 35, 31, 32, 82, 35, 31, 32, 81, 35, 31, 32, 79, 35, 31, 32, 77, 35, 31, 32, 255, 35, 31, 32, 149, 35, 31, 32, 125, 35, 31, 32, 255, 35, 31, 32, 26, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 241, 35, 31, 32, 151, 35, 31, 32, 125, 35, 31, 32, 255, 35, 31, 32, 31, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 233, 35, 31, 32, 152, 35, 31, 32, 138, 35, 31, 32, 255, 35, 31, 32, 31, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 235, 35, 31, 32, 164, 35, 31, 32, 142, 35, 31, 32, 255, 35, 31, 32, 32, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 236, 35, 31, 32, 156, 35, 31, 32, 143, 35, 31, 32, 255, 35, 31, 32, 24, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 229, 35, 31, 32, 135, 35, 31, 32, 159, 35, 31, 32, 255, 35, 31, 32, 15, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 212, 35, 31, 32, 94, 35, 31, 32, 161, 35, 31, 32, 255, 35, 31, 32, 17, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 123, 35, 31, 32, 52, 35, 31, 32, 158, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 242, 35, 31, 32, 241, 35, 31, 32, 242, 35, 31, 32, 231, 35, 31, 32, 228, 35, 31, 32, 220, 35, 31, 32, 209, 35, 31, 32, 190, 35, 31, 32, 174, 35, 31, 32, 164, 35, 31, 32, 142, 35, 31, 32, 206, 35, 31, 32, 151, 35, 31, 32, 43, 35, 31, 32, 181, 35, 31, 32, 190, 35, 31, 32, 207, 35, 31, 32, 209, 35, 31, 32, 210, 35, 31, 32, 211, 35, 31, 32, 212, 35, 31, 32, 214, 35, 31, 32, 209, 35, 31, 32, 199, 35, 31, 32, 188, 35, 31, 32, 172, 35, 31, 32, 157, 35, 31, 32, 129, 35, 31, 32, 32, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=4]
image = SubResource( 10 )
size = Vector2( 16, 16 )

[sub_resource type="Image" id=11]
data = {
"data": PoolByteArray( 255, 255, 255, 0, 35, 31, 32, 0, 35, 31, 32, 2, 35, 31, 32, 141, 35, 31, 32, 154, 35, 31, 32, 135, 35, 31, 32, 123, 35, 31, 32, 102, 35, 31, 32, 86, 35, 31, 32, 88, 35, 31, 32, 88, 35, 31, 32, 86, 35, 31, 32, 55, 35, 31, 32, 0, 35, 31, 32, 0, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 0, 35, 31, 32, 78, 35, 31, 32, 255, 35, 31, 32, 251, 35, 31, 32, 252, 35, 31, 32, 243, 35, 31, 32, 244, 35, 31, 32, 248, 35, 31, 32, 231, 35, 31, 32, 232, 35, 31, 32, 226, 35, 31, 32, 215, 35, 31, 32, 27, 35, 31, 32, 0, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 0, 35, 31, 32, 225, 35, 31, 32, 96, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 208, 35, 31, 32, 255, 35, 31, 32, 103, 35, 31, 32, 15, 35, 31, 32, 14, 35, 31, 32, 128, 35, 31, 32, 196, 35, 31, 32, 0, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 54, 35, 31, 32, 221, 35, 31, 32, 46, 35, 31, 32, 41, 35, 31, 32, 37, 35, 31, 32, 57, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 148, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 230, 35, 31, 32, 33, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 198, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 251, 35, 31, 32, 241, 35, 31, 32, 214, 35, 31, 32, 239, 35, 31, 32, 113, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 255, 35, 31, 32, 163, 35, 31, 32, 53, 35, 31, 32, 59, 35, 31, 32, 58, 35, 31, 32, 95, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 252, 35, 31, 32, 53, 35, 31, 32, 34, 35, 31, 32, 22, 35, 31, 32, 9, 35, 31, 32, 146, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 255, 35, 31, 32, 109, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 30, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 250, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 5, 35, 31, 32, 225, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 255, 35, 31, 32, 116, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 63, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 2, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 35, 35, 31, 32, 249, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 255, 35, 31, 32, 113, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 44, 35, 31, 32, 215, 35, 31, 32, 198, 35, 31, 32, 136, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 50, 35, 31, 32, 255, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 255, 35, 31, 32, 99, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 51, 35, 31, 32, 255, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 255, 35, 31, 32, 99, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 38, 35, 31, 32, 255, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 255, 35, 31, 32, 99, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 39, 35, 31, 32, 255, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 255, 35, 31, 32, 67, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 24, 35, 31, 32, 255, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 255, 35, 31, 32, 151, 35, 31, 32, 60, 35, 31, 32, 64, 35, 31, 32, 64, 35, 31, 32, 65, 35, 31, 32, 55, 35, 31, 32, 50, 35, 31, 32, 51, 35, 31, 32, 51, 35, 31, 32, 51, 35, 31, 32, 46, 35, 31, 32, 112, 35, 31, 32, 255, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 136, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 107, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=6]
image = SubResource( 11 )
size = Vector2( 16, 16 )

[sub_resource type="Image" id=12]
data = {
"data": PoolByteArray( 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 0, 35, 31, 32, 89, 35, 31, 32, 247, 35, 31, 32, 255, 35, 31, 32, 238, 35, 31, 32, 218, 35, 31, 32, 227, 35, 31, 32, 184, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 110, 35, 31, 32, 255, 35, 31, 32, 168, 35, 31, 32, 224, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 252, 35, 31, 32, 231, 35, 31, 32, 213, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 152, 35, 31, 32, 255, 35, 31, 32, 36, 35, 31, 32, 175, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 71, 35, 31, 32, 0, 35, 31, 32, 205, 35, 31, 32, 221, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 159, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 77, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 205, 35, 31, 32, 223, 35, 31, 32, 1, 35, 31, 32, 0, 35, 31, 32, 0, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 163, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 77, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 198, 35, 31, 32, 228, 35, 31, 32, 0, 35, 31, 32, 0, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 164, 35, 31, 32, 255, 35, 31, 32, 255, 35, 31, 32, 75, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 195, 35, 31, 32, 188, 35, 31, 32, 0, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 137, 35, 31, 32, 255, 35, 31, 32, 91, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 136, 35, 31, 32, 52, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 16, 35, 31, 32, 217, 35, 31, 32, 226, 35, 31, 32, 8, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 39, 35, 31, 32, 80, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 0, 35, 31, 32, 1, 35, 31, 32, 232, 35, 31, 32, 236, 35, 31, 32, 4, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 50, 35, 31, 32, 231, 35, 31, 32, 70, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 9, 35, 31, 32, 239, 35, 31, 32, 223, 35, 31, 32, 2, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 59, 35, 31, 32, 255, 35, 31, 32, 64, 35, 31, 32, 0, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 17, 35, 31, 32, 248, 35, 31, 32, 222, 35, 31, 32, 2, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 85, 35, 31, 32, 255, 35, 31, 32, 87, 35, 31, 32, 0, 35, 31, 32, 0, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 23, 35, 31, 32, 255, 35, 31, 32, 209, 35, 31, 32, 0, 35, 31, 32, 99, 35, 31, 32, 255, 35, 31, 32, 109, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 33, 35, 31, 32, 255, 35, 31, 32, 243, 35, 31, 32, 255, 35, 31, 32, 116, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 255, 255, 255, 0, 255, 255, 255, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 49, 35, 31, 32, 229, 35, 31, 32, 119, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 35, 31, 32, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=8]
image = SubResource( 12 )
size = Vector2( 16, 16 )

[node name="ChatTerminal" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 2
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1349.82
margin_right = -0.184082

[node name="TopMenuBox" type="Control" parent="VBoxContainer"]
margin_right = 250.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="Panel" type="ColorRect" parent="VBoxContainer/TopMenuBox"]
margin_right = 250.0
margin_bottom = 40.0
color = Color( 0.117647, 0.117647, 0.117647, 0.305882 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TopMenuBox"]
margin_left = 2.0
margin_top = 2.0
margin_right = 248.0
margin_bottom = 38.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TopMenuBox/MarginContainer"]
margin_right = 246.0
margin_bottom = 36.0
alignment = 1

[node name="Button" type="Button" parent="VBoxContainer/TopMenuBox/MarginContainer/HBoxContainer"]
margin_left = 49.0
margin_right = 77.0
margin_bottom = 36.0
icon = SubResource( 2 )
flat = true

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/TopMenuBox/MarginContainer/HBoxContainer"]
margin_left = 81.0
margin_right = 85.0
margin_bottom = 36.0

[node name="Button2" type="Button" parent="VBoxContainer/TopMenuBox/MarginContainer/HBoxContainer"]
margin_left = 89.0
margin_right = 117.0
margin_bottom = 36.0
icon = SubResource( 4 )
flat = true

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/TopMenuBox/MarginContainer/HBoxContainer"]
margin_left = 121.0
margin_right = 125.0
margin_bottom = 36.0

[node name="Button3" type="Button" parent="VBoxContainer/TopMenuBox/MarginContainer/HBoxContainer"]
margin_left = 129.0
margin_right = 157.0
margin_bottom = 36.0
icon = SubResource( 6 )
flat = true

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/TopMenuBox/MarginContainer/HBoxContainer"]
margin_left = 161.0
margin_right = 165.0
margin_bottom = 36.0

[node name="Button4" type="Button" parent="VBoxContainer/TopMenuBox/MarginContainer/HBoxContainer"]
margin_left = 169.0
margin_right = 197.0
margin_bottom = 36.0
icon = SubResource( 8 )
flat = true

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 250.0
margin_bottom = 44.0
rect_min_size = Vector2( 250, 0 )

[node name="Panel2" type="ColorRect" parent="VBoxContainer/Control"]
margin_right = 250.0
margin_bottom = 796.0
color = Color( 0.117647, 0.117647, 0.117647, 0.305882 )

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Control"]
margin_right = 250.0
margin_bottom = 796.0
follow_focus = true
scroll_horizontal_enabled = false
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatBox" type="VBoxContainer" parent="VBoxContainer/Control/ScrollContainer"]
margin_right = 232.0
margin_bottom = 796.0
rect_min_size = Vector2( 232, 796 )
script = ExtResource( 3 )

[node name="TextBox" type="TextEdit" parent="VBoxContainer/Control"]
anchor_bottom = 1.0
margin_top = 796.0
margin_right = 250.0
margin_bottom = 856.0
rect_min_size = Vector2( 250, 60 )
focus_mode = 1
custom_colors/background_color = Color( 0, 0, 0, 1 )
smooth_scrolling = true
wrap_enabled = true
caret_blink = true
script = ExtResource( 4 )
[connection signal="done_with_text" from="." to="VBoxContainer/Control/ScrollContainer/ChatBox" method="_on_ChatTerminal_done_with_text"]
[connection signal="got_rolled_narrative_result" from="." to="VBoxContainer/Control/ScrollContainer/ChatBox" method="_on_ChatTerminal_got_rolled_narrative_result"]
[connection signal="item_added" from="VBoxContainer/Control/ScrollContainer/ChatBox" to="VBoxContainer/Control/ScrollContainer" method="_on_ChatBox_item_added"]
[connection signal="resized" from="VBoxContainer/Control/ScrollContainer/ChatBox" to="VBoxContainer/Control/ScrollContainer" method="_on_ChatBox_resized"]
[connection signal="focus_entered" from="VBoxContainer/Control/TextBox" to="VBoxContainer/Control/TextBox" method="_on_TextBox_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/Control/TextBox" to="VBoxContainer/Control/TextBox" method="_on_TextBox_focus_exited"]
[connection signal="pressed_enter" from="VBoxContainer/Control/TextBox" to="." method="_on_TextBox_pressed_enter"]
